<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/directionList"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DirectionDetailsActivity">

    <View
        android:id="@+id/myRectangleView"
        android:layout_width="357dp"
        android:layout_height="427dp"
        android:background="@drawable/rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/directionDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Exhibit"
        android:textColor="#000000"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.047" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/direction_lists"
        android:layout_width="349dp"
        android:layout_height="398dp"
        app:layout_constraintBottom_toBottomOf="@id/myRectangleView"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="@id/myRectangleView"
        app:layout_constraintRight_toRightOf="@id/myRectangleView"
        app:layout_constraintTop_toTopOf="@id/myRectangleView"
        app:layout_constraintVertical_bias="0.047" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onNextClicked"
        android:text="NEXT"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.918"
        app:layout_constraintLeft_toLeftOf="@id/myRectangleView"
        app:layout_constraintRight_toRightOf="@id/myRectangleView"
        app:layout_constraintTop_toBottomOf="@id/myRectangleView"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/prevButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onPreviousClicked"
        android:text="Previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@id/myRectangleView"
        app:layout_constraintRight_toRightOf="@id/myRectangleView"
        app:layout_constraintTop_toBottomOf="@id/myRectangleView"
        app:layout_constraintVertical_bias="0.0"

        />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="119dp"
        android:layout_height="43dp"
        android:layout_marginBottom="40dp"
        android:onClick="onSettingsClicked"
        android:text="SWAP DIRECTION STYLE"
        android:textSize="9dp"
        app:layout_constraintTop_toBottomOf="@+id/directionDetails"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@id/myRectangleView"
        app:layout_constraintRight_toRightOf="@id/myRectangleView" />

    <Button
        android:id="@+id/skipButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onSkipClick"
        android:text="Skip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintLeft_toLeftOf="@id/myRectangleView"
        app:layout_constraintRight_toRightOf="@id/myRectangleView"
        app:layout_constraintTop_toBottomOf="@id/myRectangleView"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/inputLocButton"
        android:layout_width="119dp"
        android:layout_height="43dp"
        android:layout_marginBottom="40dp"

        android:onClick="inputLocButton"
        android:text="Input Location"
        android:textSize="9dp"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintTop_toBottomOf="@+id/directionDetails"
        app:layout_constraintLeft_toLeftOf="@id/myRectangleView"
        app:layout_constraintRight_toRightOf="@id/myRectangleView" />

    <EditText
        android:id="@+id/inputLat"
        android:layout_width="119dp"
        android:layout_height="wrap_content"

        android:layout_marginBottom="16dp"
        android:hint="Latitude"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@id/myRectangleView"
        app:layout_constraintRight_toRightOf="@id/myRectangleView" />

    <EditText
        android:id="@+id/inputLong"
        android:layout_width="119dp"
        android:layout_height="wrap_content"

        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif"
        android:hint="Longitutde"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.978"
        app:layout_constraintLeft_toLeftOf="@id/myRectangleView"
        app:layout_constraintRight_toRightOf="@id/myRectangleView" />


</androidx.constraintlayout.widget.ConstraintLayout>