<resources>
    <string name="app_name">CSE110_team45</string>
    <string name="search_text">Search</string>

    <string name="title_activity_settings">SettingsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="restore_plan">Restore Plan</string>
    <string name="app_title">ZooSeeker</string>
    <string name="restore_or_restart">Restore current plan or start from scratch?</string>
    <string name="new_plan">New Plan</string>

</resources>